Remove trust line, update product table columns, add table notes, update Why Proax image and styling

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -55,10 +55,6 @@ export const metadata = {
             <span>Free technical consultation included</span>
           </div>
         </div>
-
-        <div className="trust-line">
-          Trusted by 100+ manufacturers, including Fortune 500 companies
-        </div>
       </div>
 
       <div className="hero-visual">
@@ -370,9 +366,9 @@ export const metadata = {
             <th>Product</th>
             <th>Installation Size</th>
             <th>Flange Size (EN ISO 9409-1)</th>
-            <th>Type of Drive</th>
             <th>Pneumatic Ports</th>
-            <th>Electrical Ports</th>
+            <th>Side Type (Pairing)</th>
+            <th>Payload (kg)</th>
           </tr>
         </thead>
         <tbody>
@@ -380,116 +376,126 @@ export const metadata = {
             <td data-label="Product"><strong>WPR5040F-00-A</strong></td>
             <td data-label="Installation Size">WPR5040</td>
             <td data-label="Flange Size">TK 40</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">4</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Fixed Side (F)</td>
+            <td data-label="Payload">25</td>
           </tr>
           <tr>
             <td data-label="Product"><strong>WPR5040L-00-A</strong></td>
             <td data-label="Installation Size">WPR5040</td>
             <td data-label="Flange Size">TK 40</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">4</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Tool Side (L)</td>
+            <td data-label="Payload">25</td>
           </tr>
           <tr>
             <td data-label="Product"><strong><a href="https://proax.ca/en/product/2741760/zimwpr5050f00a" target="_blank" rel="noopener noreferrer">WPR5050F-00-A</a></strong></td>
             <td data-label="Installation Size">WPR5050</td>
             <td data-label="Flange Size">TK 50</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">4</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Fixed Side (F)</td>
+            <td data-label="Payload">35</td>
           </tr>
           <tr>
             <td data-label="Product"><strong><a href="https://proax.ca/en/product/2741764/zimwpr5050l00a" target="_blank" rel="noopener noreferrer">WPR5050L-00-A</a></strong></td>
             <td data-label="Installation Size">WPR5050</td>
             <td data-label="Flange Size">TK 50</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">4</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Tool Side (L)</td>
+            <td data-label="Payload">35</td>
           </tr>
           <tr>
             <td data-label="Product"><strong>WPR5063F-00-A</strong></td>
             <td data-label="Installation Size">WPR5063</td>
             <td data-label="Flange Size">TK 63</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">6</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Fixed Side (F)</td>
+            <td data-label="Payload">60</td>
           </tr>
           <tr>
             <td data-label="Product"><strong>WPR5063L-00-A</strong></td>
             <td data-label="Installation Size">WPR5063</td>
             <td data-label="Flange Size">TK 63</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">6</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Tool Side (L)</td>
+            <td data-label="Payload">60</td>
           </tr>
           <tr>
             <td data-label="Product"><strong>WPR5080F-00-A</strong></td>
             <td data-label="Installation Size">WPR5080</td>
             <td data-label="Flange Size">TK 80</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">6</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Fixed Side (F)</td>
+            <td data-label="Payload">80</td>
           </tr>
           <tr>
             <td data-label="Product"><strong>WPR5080L-00-A</strong></td>
             <td data-label="Installation Size">WPR5080</td>
             <td data-label="Flange Size">TK 80</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">6</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Tool Side (L)</td>
+            <td data-label="Payload">80</td>
           </tr>
           <tr>
             <td data-label="Product"><strong><a href="https://proax.ca/en/product/2738858/zimwpr5100f00a" target="_blank" rel="noopener noreferrer">WPR5100F-00-A</a></strong></td>
             <td data-label="Installation Size">WPR5100</td>
             <td data-label="Flange Size">TK 100</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">8</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Fixed Side (F)</td>
+            <td data-label="Payload">150</td>
           </tr>
           <tr>
             <td data-label="Product"><strong><a href="https://proax.ca/en/product/2738859/zimwpr5100l00a" target="_blank" rel="noopener noreferrer">WPR5100L-00-A</a></strong></td>
             <td data-label="Installation Size">WPR5100</td>
             <td data-label="Flange Size">TK 100</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">8</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Tool Side (L)</td>
+            <td data-label="Payload">150</td>
           </tr>
           <tr>
             <td data-label="Product"><strong><a href="https://proax.ca/en/product/2735266/zimwpr5125f00a" target="_blank" rel="noopener noreferrer">WPR5125F-00-A</a></strong></td>
             <td data-label="Installation Size">WPR5125</td>
             <td data-label="Flange Size">TK 125</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">10</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Fixed Side (F)</td>
+            <td data-label="Payload">270</td>
           </tr>
           <tr>
             <td data-label="Product"><strong><a href="https://proax.ca/en/product/2735267/zimwpr5125l00a" target="_blank" rel="noopener noreferrer">WPR5125L-00-A</a></strong></td>
             <td data-label="Installation Size">WPR5125</td>
             <td data-label="Flange Size">TK 125</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">10</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Tool Side (L)</td>
+            <td data-label="Payload">270</td>
           </tr>
           <tr>
             <td data-label="Product"><strong>WPR5160F-00-A</strong></td>
             <td data-label="Installation Size">WPR5160</td>
             <td data-label="Flange Size">TK 160</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">10</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Fixed Side (F)</td>
+            <td data-label="Payload">325</td>
           </tr>
           <tr>
             <td data-label="Product"><strong>WPR5160L-00-A</strong></td>
             <td data-label="Installation Size">WPR5160</td>
             <td data-label="Flange Size">TK 160</td>
-            <td data-label="Type of Drive">Pneumatic</td>
             <td data-label="Pneumatic Ports">10</td>
-            <td data-label="Electrical Ports">Optional</td>
+            <td data-label="Side Type">Tool Side (L)</td>
+            <td data-label="Payload">325</td>
           </tr>
         </tbody>
       </table>
+    </div>
+
+    <div className="table-notes">
+      <p><strong>Notes:</strong></p>
+      <ul>
+        <li><strong>Type of Drive:</strong> Pneumatic</li>
+        <li><strong>Electrical Ports:</strong> Optional on all models</li>
+        <li><strong>Payload Ratings:</strong> All payloads are rated at 10 m/s² acceleration and within the rated C.G. offset</li>
+        <li><strong>Pairing Rule:</strong> Each F (Fixed Side) model pairs with the corresponding L (Tool Side) model (e.g., WPR5040F ↔ WPR5040L)</li>
+      </ul>
     </div>
 
     <div className="table-cta-wrapper">
@@ -572,14 +578,16 @@ export const metadata = {
     <div className="why-proax-grid">
       <div className="why-proax-image">
         <img 
-          src="https://proax.ca/strapiv4/uploads/why_proax_1ba808ec90.png" 
-          alt="Why Proax" 
+          src="https://proax.ca/strapiv4/uploads/why_proax_image_7ce2960833.webp" 
+          alt="Why Proax"
+          width="1200"
+          loading="lazy"
         />
       </div>
       <div className="why-proax-content">
         <h2 className="why-proax-heading">Why Proax</h2>
         <p className="why-proax-text">
-          With 60+ years in automation and 13 locations across Canada, we don't just sell tool changers. We support them. Our in-house engineers provide free technical consultation from selection to integration. Local stock, fast shipping, real expertise.
+          We don't just sell tool changers. We support them. Our in-house engineers provide free technical consultation from selection to integration. Local stock, fast shipping, real expertise.
         </p>
         <div className="why-proax-stats">
           <div className="why-proax-stat">
